add caro as author

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "FMN",
   "authors": [
-    "Benny Lichtner <bennlich@gmail.com>"
+    "Benny Lichtner <bennlich@gmail.com>",
+    "Carolyn Atterbury"
   ],
   "description": "family music night homigosh",
   "main": "",
