--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "riot": "^2.3.15",
     "firebase": "^2.4.0",
-    "less": "^2.6.0"
+    "less": "^2.6.0",
+    "randomcolor": "^0.4.4"
   }
 }
