update firebase and getAsArray (fixes deprecation warnings)

--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,9 @@
   ],
   "dependencies": {
     "riot": "^2.3.15",
-    "firebase": "^2.4.0",
     "less": "^2.6.0",
     "randomcolor": "^0.4.4",
-    "firebase.getAsArray": "git@github.com:katowulf/Firebase.getAsArray.git"
+    "firebase": "^2.4.2",
+    "firebase.getAsArray": "git@github.com:bennlich/Firebase.getAsArray.git"
   }
 }
