use https instead of ssh for firebase.getAsArray

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
     "less": "^2.6.0",
     "randomcolor": "^0.4.4",
     "firebase": "^2.4.2",
-    "firebase.getAsArray": "git@github.com:bennlich/Firebase.getAsArray.git"
+    "firebase.getAsArray": "https://github.com/bennlich/Firebase.getAsArray.git"
   }
 }
